will the bg img ever show up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@
 
       /* Photo Div */
       .bg-1 {
-          background-image: url("./images/charcoal.jpg");
+          background-image: url("https//marinemasta.githubio/assets/images/charcoal.jpg");
           height: auto;
           width: auto;
           background-size: cover;
